fix z-index for status bar

--- a/src/components/status-bar/status-bar.css
+++ b/src/components/status-bar/status-bar.css
@@ -10,7 +10,6 @@
     left: 0;
     width: 100%;
     height: var(--header-height);
-    z-index: 30;
     display: flex;
     align-items: center;
     justify-content: space-between;
